example/SyntaxError/input_line.pione
Rule ABC
  input #####
  output '*.b'
Action
cat {$I[1]} > {$O[1]}
End